--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   },
   "dependencies": {
     "cli": "^0.6.5",
-    "lisp-json-to-js": "^0.3.0",
+    "lisp-array-to-js": "^0.1.1",
     "lisp-to-json": "^0.4.0"
   },
   "bin": "./cli.js"
