--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
   "dependencies": {
     "cli": "^0.6.5",
     "lisp-array-to-js": "^0.1.1",
-    "lisp-to-json": "^0.4.0"
+    "lisp-to-array": "^0.1.0"
   },
   "bin": "./cli.js"
 }
