--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "lisp-to-js",
   "version": "0.2.1",
   "description": "Transpiles lisp code to JS code",
-  "main": "lisp-to-js.js",
+  "main": "dist/lisp-to-js.js",
   "scripts": {
-    "test": "grunt test"
+    "prepublish": "gulp build",
+    "test": "standard {test/,lib/,./}*.js"
   },
   "repository": {
     "type": "git",
@@ -17,20 +18,16 @@
   },
   "homepage": "https://github.com/ileri/lisp-to-js",
   "devDependencies": {
-    "grunt": "^0.4.5",
-    "grunt-browserify": "^3.4.0",
-    "grunt-contrib-jshint": "^0.10.0",
-    "grunt-contrib-uglify": "^0.8.0",
-    "grunt-mocha-test": "^0.12.4",
-    "jshint-stylish": "^1.0.0",
-    "load-grunt-tasks": "^1.0.0",
-    "mocha": "^2.1.0",
-    "time-grunt": "^1.0.0"
+    "babel": "^5.2.17",
+    "gulp": "^3.8.11",
+    "gulp-babel": "^5.1.0",
+    "gulp-replace": "^0.5.3",
+    "gulp-sourcemaps": "^1.5.2"
   },
   "dependencies": {
     "cli": "^0.6.5",
     "lisp-array-to-js": "^0.2.0",
     "lisp-to-array": "^0.1.0"
   },
-  "bin": "./cli.js"
+  "bin": "dist/cli.js"
 }
